fixing word wrap on urls

--- a/app/collector.less
+++ b/app/collector.less
@@ -21,6 +21,10 @@
 
 /* Components */
 
+.url {
+  word-break: break-all;
+}
+
 i {
   color: #999;
 }
